--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ edition = "2018"
 
 [dependencies]
 minifb = "0.23.0"
-plotters = {path = "../..", default_features = false, features = ["ttf"]}
+
+[dependencies.plotters]
+git = "https://github.com/plotters-rs/plotters"
+default_features = false
+features = ["ttf"]
 
 [dependencies.plotters-bitmap]
 default_features = false
-git = "https://github.com/plotters-rs/plotters-bitmap"
-# version = "0.3.1"
+git = "https://github.com/plotters-rs/plotters"
